--- a/partials/snippet-browser.html
+++ b/partials/snippet-browser.html
@@ -1,20 +1,31 @@
 <div id="samplesContainer" class="container" style="overflow: hidden; display:flex; flex-direction: column; position: absolute; top:0px; bottom: 0px; left: 0px; right: 0px; padding: 10px;">
 	<div>
-		<select ng-model="selectedGroup" ng-options="group.name for group in groups">
-			<option value="">-- choose a group --</option>
-		</select>
-		<a href="#/testAll" style="text-decoration: none;">-</a>
-		<select ng-change="loadSampleCode()" ng-model="selectedSample" ng-options="sample.name for sample in samples | filter:{group: selectedGroup.name}">
-			<option value="">-- choose a sample --</option>
-		</select> 
-	</div>
+        <h2 class="title">Excel JavaScript API Snippet Explorer (Preview)</h2>
+        <p>Welcome! Learn how to implement the new Excel JavaScript APIs (Preview) with code snippets.<p>
+            <h4>Choose the API</h4>
+            <select ng-model="selectedGroup" ng-options="group.name for group in groups">
+                <option value="">-- choose a group --</option>
+            </select>
+            <a href="#/testAll" style="text-decoration: none;">-</a>
+            <select ng-change="loadSampleCode()" ng-model="selectedSample" ng-options="sample.name for sample in samples | filter:{group: selectedGroup.name}">
+                <option value="">-- choose a sample --</option>
+            </select>
+</div>
 	<div>
 		<p><button id="runButton" ng-hide="!insideOffice" ng-click="runSelectedSample()">Run!</button> <span>{{selectedSample.description}}</span></p>
 	</div>
+    <h4>Sample code</h4>
 	<div style="flex-grow: 1; overflow: hidden" id="TxtRichApiScript">
 	
 	</div>
 	<div ng-hide="!insideOffice">
 		<textarea style="width:100%; height:150px;" id="console"></textarea>
 	</div>
+    <div>
+        <h4>Is the explorer helpful? </h4>
+        <p>Let us know what you think on <a href="http://officespdev.uservoice.com/">User Voice</a>.</p>
+        <h4>Want to share your code?</h4>
+        <p>The code snippets referenced by the explorer are available <a href="https://github.com/OfficeDev/office-js-snippet-explorer/tree/master/excel-snippets">here</a>. To share your own code snippets, submit a pull request.</p>
+    </div>
+    <div><span class="copyright">&copy; 2015 Microsoft</span></div>
 </div>
