added links to documentation

--- a/partials/snippet-browser.html
+++ b/partials/snippet-browser.html
@@ -25,6 +25,8 @@
         <p>Let us know what you think on <a href="http://officespdev.uservoice.com/">User Voice</a>.</p>
         <h4>Want to share your code?</h4>
         <p>The code snippets referenced by the explorer are available <a href="https://github.com/OfficeDev/office-js-snippet-explorer/tree/master/excel-snippets">here</a>. To share your own code snippets, submit a pull request.</p>
+        <h4>Interested to learn more about these APIs?</h4>
+        <p>Learn more about these APIs by <a href="https://github.com/OfficeDev/office-js-docs">reading the documentation</a>.</p>
     </div>
     <div><span class="copyright">&copy; 2015 Microsoft</span></div>
 </div>
